extended themes to network options

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Puntuacions més altes
 OPTION_VALUE_ALL=Tot
 OPTION_VALUE_PLAYER=Jugador
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Premeu la tecla "Insereix" per afegir l'usuari a aquesta web...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Pàgina web
 SING_OPTIONS_NETWORK_USERNAME=Nom d'usuari
 SING_OPTIONS_NETWORK_PASSWORD=Contrasenya
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=No s'ha trobat cap complement de classificació comp
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Vols esborrar el usuari %0:s del lloc web %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Insereix
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Suprimeix
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Jugador 1
 OPTION_PLAYER_2=Jugador 2
@@ -657,6 +664,7 @@ C_COLOR_YELLOW=Groc
 C_CONTINUE=Continuar
 C_CREATEDBY=Creat per
 
+;TODO: C_DELETE_USER=Delete user
 C_DUET=Duet
 C_DUETS=Duets
 
@@ -670,6 +678,7 @@ C_GAME=Joc
 C_GRAPHICS=Gràfics
 
 C_INFORMATION=Informació
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Joker
