--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
 OPTION_VALUE_ALL=Alle
 OPTION_VALUE_PLAYER=Spieler
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Drücke 'Einfügen' um Spieler dem Internet hinzuzufügen.
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Webseite
 SING_OPTIONS_NETWORK_USERNAME=Benutzername
 SING_OPTIONS_NETWORK_PASSWORD=Passwort
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Kein kompatibles Ranglisten-Plugin gefunden!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Spieler %0:s wirklich von der Webseite %1:s löschen?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Einfg
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Entf
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Spieler 1
 OPTION_PLAYER_2=Spieler 2
@@ -657,6 +664,7 @@ C_COLOR_YELLOW=Gelb
 C_CONTINUE=Fortsetzen
 C_CREATEDBY=Erstellt von
 
+;TODO: C_DELETE_USER=Delete user
 C_DUET=Duett
 C_DUETS=Duette
 
@@ -670,6 +678,7 @@ C_GAME=Spiel
 C_GRAPHICS=Grafik
 
 C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Joker
