--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Kõrgemad skoorid
 OPTION_VALUE_ALL=Kõik
 OPTION_VALUE_PLAYER=Mängija
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Vajuta klahvi "Insert" kasutaja sisestamiseks veebi...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Veebisait
 SING_OPTIONS_NETWORK_USERNAME=Kasutaja
 SING_OPTIONS_NETWORK_PASSWORD=Parool
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Ei leitud sobivat edetabeli pluginat!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Lõplikult kustutada kasutaja %0:s veebisaidilt %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Sisesta
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Kustuta
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Mängija 1
 OPTION_PLAYER_2=Mängija 2
@@ -657,6 +664,7 @@ C_COLOR_YELLOW=Kollane
 C_CONTINUE=Jätka
 C_CREATEDBY=Koostatud
 
+;TODO: C_DELETE_USER=Delete user
 C_DUET=Duett
 C_DUETS=Duettid
 
@@ -670,6 +678,7 @@ C_GAME=Mäng
 C_GRAPHICS=Graafika
 
 C_INFORMATION=Informatsioon
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Jokker
