--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
 OPTION_VALUE_ALL=All
 OPTION_VALUE_PLAYER=Player
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
+SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Username
 SING_OPTIONS_NETWORK_PASSWORD=Password
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Delete
+
+SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Player 1
 OPTION_PLAYER_2=Player 2
@@ -657,6 +664,7 @@ C_COLOR_YELLOW=Yellow
 C_CONTINUE=Continue
 C_CREATEDBY=Created by
 
+C_DELETE_USER=Delete user
 C_DUET=Duet
 C_DUETS=Duets
 
@@ -670,6 +678,7 @@ C_GAME=Game
 C_GRAPHICS=Graphics
 
 C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Joker
