--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Mostrar las 5 mejores puntuaciones de un ju
 OPTION_VALUE_ALL=Todos los jugadores
 OPTION_VALUE_PLAYER=Jugador actual
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Pulsa la tecla "Insert" para añadir un usuario a esta web
+SING_OPTIONS_NETWORK_INSERT_USER_INFO=Sincroniza la cuenta de la web con el juego para enviar tus puntuaciones
 SING_OPTIONS_NETWORK_WEBSITE=Página web
 SING_OPTIONS_NETWORK_USERNAME=Usuario
 SING_OPTIONS_NETWORK_PASSWORD=Contraseña
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Está usando una versión desactualizada. Visite nue
 SING_OPTIONS_NETWORK_DELETE_PLAYER=¿De verdad quieres eliminar el usuario %0:s de la web de %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Insertar
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Eliminar
+
+SING_OPTIONS_NETWORK_WEBSITE_DESC=Página web donde las puntuaciones serán enviadas
+SING_OPTIONS_NETWORK_USERNAME_DESC=Cuenta registrada
+SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Envía tu nombre local
+SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automatizar puntuaciones
+SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Enviar puntuaciones de este jugador
+SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Enviar automaticamente la puntuación por encima de esta cifra
 
 OPTION_PLAYER_1=Jugador 1
 OPTION_PLAYER_2=Jugador 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Amarillo
 C_CONTINUE=Continuar
 C_CREATEDBY=Creado por
 
+C_DELETE_USER=Borrar usuario
 C_DUET=Dueto
 C_DUETS=Duetos
 
@@ -668,6 +676,7 @@ C_GAME=Juego
 C_GRAPHICS=Gráficos
 
 C_INFORMATION=Información
+C_INSERT_USER=Insertar usuario
 C_INTERNET=Internet
 
 C_JOKER=Comodín
