--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 OPTION_VALUE_ALL=Tout
 OPTION_VALUE_PLAYER=Joueur
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Appuyer sur "Insert" pour ajouter cet utilisateur au site...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Site Internet
 SING_OPTIONS_NETWORK_USERNAME=Utilisateur
 SING_OPTIONS_NETWORK_PASSWORD=Mot de passe
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Aucun plugin de scores compatible trouvé !
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Voulez-vous vraiment supprimer l'utilisateur %0:s du site %1:s ?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Insérer
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Supprimer
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Joueur 1
 OPTION_PLAYER_2=Joueur 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Jaune
 C_CONTINUE=Continuer
 C_CREATEDBY=Créée par
 
+;TODO: C_DELETE_USER=Delete user
 C_DUET=Duo
 C_DUETS=Duos
 
@@ -668,6 +676,7 @@ C_GAME=Jeu
 C_GRAPHICS=Graphismes
 
 C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Joker
