--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Preguntar ó borrar
 OPTION_VALUE_ALL=Todo
 OPTION_VALUE_PLAYER=Xogador
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Preme a tecla "Insert" para engadir un usuario a esta web
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Páxina web
 SING_OPTIONS_NETWORK_USERNAME=Usuario
 SING_OPTIONS_NETWORK_PASSWORD=Contrasinal
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Non hai DLL's Web compatibles con UltraStar WorldPar
 SING_OPTIONS_NETWORK_DELETE_PLAYER=De verdad queres suprimir o usuario %0:s da web de %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Engadir
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Suprimir
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Xogador 1
 OPTION_PLAYER_2=Xogador 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Amarelo
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
@@ -668,6 +676,7 @@ C_GAME=Xogo
 C_GRAPHICS=Gráficos
 
 ;TODO: C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 ;TODO: C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
