--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Na sgòran as àirde
 OPTION_VALUE_ALL=Na h-uile
 OPTION_VALUE_PLAYER=Cluicheadair
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Brùth air an iuchair “Insert” gus an cleachdaiche a chur ris an lìon seo…
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Làrach-lìn
 SING_OPTIONS_NETWORK_USERNAME=Ainm-cleachdaiche
 SING_OPTIONS_NETWORK_PASSWORD=Facal-faire
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Cha deach clàr curaidh co-chòrdail a lorg!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=A bheil thu airson an cleachdaiche %0:s air an làrach-lìn %1:s a sguabadh ás?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Cuir a-steach
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Sguab às
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Cluicheadair 1
 OPTION_PLAYER_2=Cluicheadair 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Buidhe
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
@@ -668,6 +676,7 @@ C_GAME=Geama
 C_GRAPHICS=Grafaigeachd
 
 ;TODO: C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Eadar-lìon
 
 ;TODO: C_JOKER=Joker
