--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Ranglista
 OPTION_VALUE_ALL=Összes
 OPTION_VALUE_PLAYER=Játékos
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Nyomd meg az "Insert"-et hogy felhasználót adj hozzá.
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Weboldal
 SING_OPTIONS_NETWORK_USERNAME=Felhasználónév
 SING_OPTIONS_NETWORK_PASSWORD=Jelszó
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Nem találtam kompatibilis leaderboard-plugin-t!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Biztos hogy törlöd %0:s , erről az oldalról %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Beilleszt
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Töröl
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Játékos 1
 OPTION_PLAYER_2=Játékos 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Sárga
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
@@ -668,6 +676,7 @@ C_GAME=Játék
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
