--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Najlepsze wyniki
 OPTION_VALUE_ALL=Wszystko
 OPTION_VALUE_PLAYER=Gracz
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Wciśnij "Insert" aby dodać użytkownika do tej strony...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Strona internetowa
 SING_OPTIONS_NETWORK_USERNAME=Nazwa użytkownika
 SING_OPTIONS_NETWORK_PASSWORD=Hasło
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Brak kompatybilnego pluginu wyników!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Naprawdę usunąć użytkownika %0:s ze strony %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Wstaw
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Usuń
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Gracz 1
 OPTION_PLAYER_2=Gracz 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Żółty
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
@@ -668,6 +676,7 @@ C_GAME=Gra
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 ;TODO: C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
