--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Top Pontuações
 OPTION_VALUE_ALL=Todas
 OPTION_VALUE_PLAYER=Jogador
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Pressionar a tecla "Insert" para adicionar um utilizador a este website...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Username
 SING_OPTIONS_NETWORK_PASSWORD=Password
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Não existem Web Dll's compatíveis com o Ultrastar 
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Deseja mesmo eliminar o utilizador %0:s do website %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Inserir
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Apagar
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Jogador 1
 OPTION_PLAYER_2=Jogador 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Amarelo
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
@@ -668,6 +676,7 @@ C_GAME=Jogo
 C_GRAPHICS=Gráficos
 
 ;TODO: C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
