--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Top skóre
 OPTION_VALUE_ALL=Všade
 OPTION_VALUE_PLAYER=Hráč
 
-SING_OPTIONS_NETWORK_INSERT_USER_INFO=Stlačte kláves "Insert" pre pridanie používateľa na tento web...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Webová stránka
 SING_OPTIONS_NETWORK_USERNAME=Meno používateľa
 SING_OPTIONS_NETWORK_PASSWORD=Heslo
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_NO_DLL=Nebol nájdený žiaden kompatibilný modul leaderbo
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Naozaj odstrániť používateľa %0:s z webovej stránky %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Odstrániť
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Hráč 1
 OPTION_PLAYER_2=Hráč 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Žltá
 C_CONTINUE=Pokračovať
 C_CREATEDBY=Vytvoril(a)
 
+;TODO: C_DELETE_USER=Delete user
 C_DUET=Duet
 C_DUETS=Duety
 
@@ -668,6 +676,7 @@ C_GAME=Hra
 C_GRAPHICS=Grafika
 
 C_INFORMATION=Informácie
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Žolík
