--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -201,7 +201,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Geriausi rezultatai
 OPTION_VALUE_ALL=Visi
 OPTION_VALUE_PLAYER=Žaidėjas
 
-;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
+;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Vartotojo vardas
 SING_OPTIONS_NETWORK_PASSWORD=Slaptažodis
@@ -215,6 +215,13 @@ SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Siųsti (Sunku)
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Įdėti
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Ištrinti
+
+;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
+;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
+;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
 
 OPTION_PLAYER_1=Žaidėjas 1
 OPTION_PLAYER_2=Žaidėjas 2
@@ -655,6 +662,7 @@ C_COLOR_YELLOW=Geltonas
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DELETE_USER=Delete user
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
@@ -668,6 +676,7 @@ C_GAME=Žaidimas
 C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
+;TODO: C_INSERT_USER=Insert user
 C_INTERNET=Internetas
 
 ;TODO: C_JOKER=Joker
