extended themes to webcam options

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -289,6 +289,15 @@ SING_OPTIONS_WEBCAM_HUE=Matiz
 SING_OPTIONS_WEBCAM_EFFECT=Efecto
 SING_OPTIONS_WEBCAM_PREVIEW=Activar previsualización
 
+SING_OPTIONS_WEBCAM_ID_DESC=Selecciona la cámara web que vas a usar
+SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Selecciona un tamaño de imagen para tu cámara web
+SING_OPTIONS_WEBCAM_FPS_DESC=Frecuencia a la que reproducen las imágenes consecutivas
+SING_OPTIONS_WEBCAM_FLIP_DESC=Voltear imagen horizontalmente
+SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Ajusta el brillo de la imagen
+SING_OPTIONS_WEBCAM_SATURATION_DESC=Ajusta la intensidad de color
+SING_OPTIONS_WEBCAM_HUE_DESC=Grado de color de la imagen 
+SING_OPTIONS_WEBCAM_EFFECT_DESC=Aplica un filtro a la imagen
+
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Sí
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=No
 SING_OPTIONS_WEBCAM_NO_WEBCAM=¡No se ha encontrado ninguna cámara!
