--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -289,6 +289,15 @@ SING_OPTIONS_WEBCAM_SATURATION=Verzadiging
 SING_OPTIONS_WEBCAM_EFFECT=Effecten
 SING_OPTIONS_WEBCAM_PREVIEW=Activeer preview
 
+;TODO: SING_OPTIONS_WEBCAM_ID_DESC=Select the webcam you want to use
+;TODO: SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Select an image size for your webcam
+;TODO: SING_OPTIONS_WEBCAM_FPS_DESC=Frequency at which consecutive images appear on a display
+;TODO: SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
+;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
+;TODO: SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
+;TODO: SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade 
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_DESC=Apply a filter to the image
+
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
