--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -289,6 +289,15 @@ SING_OPTIONS_WEBCAM_HUE=Hue
 SING_OPTIONS_WEBCAM_EFFECT=Effect
 SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 
+SING_OPTIONS_WEBCAM_ID_DESC=Select the webcam you want to use
+SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Select an image size for your webcam
+SING_OPTIONS_WEBCAM_FPS_DESC=Frequency at which consecutive images appear on a display
+SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
+SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
+SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
+SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade 
+SING_OPTIONS_WEBCAM_EFFECT_DESC=Apply a filter to the image
+
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
 SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
@@ -678,7 +687,7 @@ C_GAME=Game
 C_GRAPHICS=Graphics
 
 C_INFORMATION=Information
-;TODO: C_INSERT_USER=Insert user
+C_INSERT_USER=Insert user
 C_INTERNET=Internet
 
 C_JOKER=Joker
