--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -291,7 +291,7 @@ SING_OPTIONS_WEBCAM_PREVIEW=Activar previsualización
 
 SING_OPTIONS_WEBCAM_ID_DESC=Selecciona la cámara web que vas a usar
 SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Selecciona un tamaño de imagen para tu cámara web
-SING_OPTIONS_WEBCAM_FPS_DESC=Frecuencia a la que reproducen las imágenes consecutivas
+SING_OPTIONS_WEBCAM_FPS_DESC=Muestra los fotogramas por segundos de la cámara
 SING_OPTIONS_WEBCAM_FLIP_DESC=Voltear imagen horizontalmente
 SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Ajusta el brillo de la imagen
 SING_OPTIONS_WEBCAM_SATURATION_DESC=Ajusta la intensidad de color
