--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -291,7 +291,7 @@ SING_OPTIONS_WEBCAM_EFFECT=效果
 
 ;TODO: SING_OPTIONS_WEBCAM_ID_DESC=Select the webcam you want to use
 ;TODO: SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Select an image size for your webcam
-;TODO: SING_OPTIONS_WEBCAM_FPS_DESC=Frequency at which consecutive images appear on a display
+;TODO: SING_OPTIONS_WEBCAM_FPS_DESC=Displays the frames per second of the camera
 ;TODO: SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
 ;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
