--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -291,7 +291,7 @@ SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 
 SING_OPTIONS_WEBCAM_ID_DESC=Select the webcam you want to use
 SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Select an image size for your webcam
-SING_OPTIONS_WEBCAM_FPS_DESC=Frequency at which consecutive images appear on a display
+SING_OPTIONS_WEBCAM_FPS_DESC=Displays the frames per second of the camera
 SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
 SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
 SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
